[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/ui/select/char/preview/goto.png" type="Texture" id=1]
[ext_resource path="res://Resources/raw/Pixel Intv.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PaletteInfographic.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="PaletteInfographic" type="ColorRect"]
margin_right = 354.0
margin_bottom = 112.0
rect_pivot_offset = Vector2( -336, -198 )
color = Color( 0, 0, 0, 0.682353 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Sprite" parent="."]
position = Vector2( 57, 55 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )

[node name="CharacterLabel" type="Label" parent="."]
margin_left = 114.0
margin_top = 13.0
margin_right = 345.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "Character: goto"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IndexLabel" type="Label" parent="."]
margin_left = 114.0
margin_top = 36.0
margin_right = 346.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "Index: null"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PaletteLabel" type="Label" parent="."]
margin_left = 114.0
margin_top = 84.0
margin_right = 351.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Color: null"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SectionLabel" type="Label" parent="."]
margin_left = 114.0
margin_top = 60.0
margin_right = 345.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 1 )
text = "Section: null"
__meta__ = {
"_edit_use_anchors_": false
}
